hphp/hack/test/typecheck/constraint_array_index/after/vec_called_on_int_imm_map.php.exp
ERROR: File "vec_called_on_int_imm_map.php", line 3, characters 3-24:
Typing error (Typing[4110])
  File "vec_called_on_int_imm_map.php", line 3, characters 3-17:
  Expected `arraykey` because only array keys can be used to index into a `Map`, `dict`, `darray`, `Set`, or `keyset`
  File "vec_called_on_int_imm_map.php", line 3, characters 19-23:
  But got `vec<nothing>`
