hphp/hack/test/typecheck/constraint_array_index/after/vec_called_on_int_imm_map.php
<?hh
function f(): void {
  ImmMap {0 => 0}[vec[]];
}
